<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        tools:context=".view.fragment.dialog.CollectUserDataDialogFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/description_text_collect_data"
            android:textColor="?attr/colorSecondaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/header_text_collect_data"
            android:textColor="?attr/colorPrimaryText"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_search_form_margin"
            app:cardBackgroundColor="?attr/colorSecondary"
            app:cardCornerRadius="@dimen/cardview_search_form_radius"
            app:contentPadding="@dimen/cardview_search_form_padding">

            <Spinner
                android:id="@+id/gender_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_search_form_margin"
            app:cardBackgroundColor="?attr/colorSecondary"
            app:cardCornerRadius="@dimen/cardview_search_form_radius"
            app:contentPadding="@dimen/cardview_search_form_padding">

            <Spinner
                android:id="@+id/age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_groups" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_search_form_margin"
            app:cardBackgroundColor="?attr/colorSecondary"
            app:cardCornerRadius="@dimen/cardview_search_form_radius"
            app:contentPadding="@dimen/cardview_search_form_padding">

            <Switch
                android:id="@+id/location_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_location"
                android:textColor="?attr/colorSecondaryText" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/country_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_search_form_margin"
            app:cardBackgroundColor="?attr/colorSecondary"
            app:cardCornerRadius="@dimen/cardview_search_form_radius"
            app:contentPadding="@dimen/cardview_search_form_padding">

            <Switch
                android:id="@+id/country_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_country"
                android:textColor="?attr/colorSecondaryText" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/privacy_data_collect_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_collect_data_link"
                android:textColor="@color/white"
                android:visibility="visible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/agree_text_collect_data"
                android:visibility="visible"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <Button
                android:id="@+id/accept_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="?attr/colorSecondary"
                android:text="@string/accept"
                android:textColor="?attr/colorPrimaryText" />

            <Button
                android:id="@+id/decline_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="?attr/colorSecondary"
                android:text="@string/decline"
                android:textColor="?attr/colorPrimaryText" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
