<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".view.fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cdts_settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_cdts_title"
            android:textAlignment="textStart"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="start"
            android:visibility="visible"/>


        <lmu.hradio.hradioshowcase.view.component.PreferenceView
            android:id="@+id/cdts_username_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cdts_settings_text"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/general_settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_general_title"
            android:textAlignment="textStart"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintTop_toBottomOf="@id/cdts_username_preference"
            android:gravity="start" />

        <lmu.hradio.hradioshowcase.view.component.PreferenceView
            android:id="@+id/data_usage_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/general_settings_text"
            android:visibility="gone"/>

        <lmu.hradio.hradioshowcase.view.component.PreferenceView
            android:id="@+id/recommender_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/data_usage_preference" />

        <Switch
            android:id="@+id/dark_mode_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            android:text="@string/use_dark_mode_title"
            android:textColor="?attr/colorPrimaryText"
            android:textSize="@dimen/primary_text_size"
            android:padding="@dimen/preferenceDistanceShort"
            app:layout_constraintTop_toBottomOf="@+id/recommender_preference"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/substitution_settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_substitution_title"
            android:textAlignment="textStart"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/secondary_text_size"
            android:layout_marginTop="@dimen/preferenceDistanceShort"
            app:layout_constraintTop_toBottomOf="@+id/dark_mode_preference"
            android:gravity="start" />

        <lmu.hradio.hradioshowcase.view.component.PreferenceView
            android:id="@+id/substitution_provider_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/substitution_settings_text" />

        <lmu.hradio.hradioshowcase.view.component.PreferenceView
            android:id="@+id/substitution_playlist_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/substitution_provider_preference" />


        <TextView
            android:id="@+id/web_settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_web_config_location"
            android:textAlignment="textStart"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintTop_toBottomOf="@+id/substitution_playlist_preference"
            android:visibility="gone"
            android:gravity="start" />


        <lmu.hradio.hradioshowcase.view.component.PreferenceView
            android:id="@+id/web_view_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/web_settings_text" />

        <TextView
            android:id="@+id/pref_about_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_cat_about"
            android:textAlignment="textStart"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintTop_toBottomOf="@+id/substitution_playlist_preference"
            android:gravity="start" />

        <lmu.hradio.hradioshowcase.view.component.PreferenceView
            android:id="@+id/pref_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pref_about_category" />

        <Button
            android:id="@+id/del_cdts_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete CDTS"
            app:layout_constraintTop_toBottomOf="@+id/pref_about"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>